Fix switch visibility in android theme

--- a/styles/widgets/android5/switch.android5.less
+++ b/styles/widgets/android5/switch.android5.less
@@ -39,13 +39,13 @@
 }
 
 .dx-switch-inner {
-    width: 100%;
+    width: 200%;
     height: 100%;
 }
 
 .dx-switch-on, .dx-switch-off {
+    flex-shrink: 0;
     float: left;
-    margin-left: -@ANDROID5_SWITCH_RADIUS;
     padding: 4px 0;
     width: 50%;
     height: @ANDROID5_SWITCH_HEIGHT;
@@ -56,7 +56,6 @@
 
 .dx-switch-on {
     background: transparent;
-    width: 100%;
 }
 
 .dx-switch-off {
@@ -68,7 +67,8 @@
 .dx-switch-handle {
     position: relative;
     float: left;
-    margin-left: -@ANDROID5_SWITCH_RADIUS;
+    flex-basis: @ANDROID5_SWITCH_HEIGHT;
+    flex-shrink: 0;
     width: @ANDROID5_SWITCH_HEIGHT;
     height: @ANDROID5_SWITCH_HEIGHT;
     background-color: @ANDROID5_SWITCH_OFF_HANDLE_COLOR;
